--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,14 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
+[dependencies.derive_more]
+version = "0.99.16"
+default-features = false
+features = ["constructor"]
+
+[dependencies.derive-new]
+version = "0.5.9"
+
+[dependencies.auto_impl]
+version = "0.4.1"
+
