--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 [dependencies.derive_more]
 version = "0.99.16"
 default-features = false
-features = ["constructor"]
+features = ["constructor", "display"]
 
 [dependencies.derive-new]
 version = "0.5.9"
